middle align img to prevent rendering issues

--- a/src/assets/css/base/base.sass
+++ b/src/assets/css/base/base.sass
@@ -15,3 +15,6 @@ body
 
 	background: white
 	text-rendering: optimizeLegibility
+
+img
+	vertical-align: middle
